@@ -1,7 +1,0 @@
-﻿namespace FlatFile.FixedWidth.Interfaces
-{
-    public interface IPrimitiveTypeConverter
-    {
-        string GetConvertedString(string unparsedString);
-    }
-}
