@@ -1,5 +1,5 @@
-0    True   9223372036854775807                79228162514264337593543950335      1.79769313486232E+308              3.402823E+38                       2147483647                         18446744073709551615               Test 1            32767                              65535                              4294967295                         
-1    False  -9223372036854775808               -79228162514264337593543950335     -1.79769313486232E+308             -3.402823E+38                      -2147483648                        0                                  Test 2            -32768                             0                                  0                                  
+0    True   0                                  -0.2147483648                      -0.2147483648                      -0.2147484                         2147483647                         18446744073709551615               Test 1            32767                              0                                  4294967295                         
+1    False  -9223372036854775808               -0.2147483648                      -0.2147483648                      -0.2147484                         -2147483648                        0                                  Test 2            -32768                             0                                  0                                  
 2    False  42                                 42.42424242                        42.42424242                        42.42424                           42                                 42                                 l33t $42          42                                 42                                 42                                 
 3    True   0                                  0                                  0                                  0                                  0                                  0                                                    0                                  0                                  0                                  
 4    True   101                                145.44                             202                                -102                               100                                2000                               Test String 4     -10                                16                                 20                                 
