@@ -18,7 +18,7 @@ namespace FlatFileParserUnitTests.Tests.LayoutDescriptor
             ParsedRows = ParseTestFile();
         }
 
-        private ICollection<T> ExpectedRows => expectedRows ?? (expectedRows = GetExpectedRows());
+        protected ICollection<T> ExpectedRows => expectedRows ?? (expectedRows = GetExpectedRows());
 
 
         protected void AssertAllRowsMatchExpected()
@@ -29,7 +29,14 @@ namespace FlatFileParserUnitTests.Tests.LayoutDescriptor
         protected void AssertFirstRowMatchesExpected()
         {
             // This is reference equals by default. Equals method is overriden in T to implement value equals vs. reference equals
-            Assert.AreEqual(ExpectedRows.First(), ParsedRows.First());
+            var expected = ExpectedRows.First();
+            var actual = ParsedRows.First();
+
+            // FAIL
+            // floatTest
+            //expected: -0.214748368
+            //actual: -0.2147484
+            Assert.AreEqual(expected, actual);
         }
 
         protected abstract ICollection<T> GetExpectedRows();
